--- a/src/index/index.html
+++ b/src/index/index.html
@@ -104,7 +104,7 @@
                 'background-color: #ffd225; color:#1f0200;height:0.6rem;line-height:0.6rem;font-size:0.28rem'
             ],
             type:1,
-            style: 'width: 6.9rem'
+            style: 'width: 6.9rem;border-radius:0.08rem'
             , content: '<div class="layerContent"><div style="margin: 0.26rem auto;text-align: left;width: 4rem;font-size: 0.24rem">30元11GB组合流量包资费：30元/次 <br/>有效期：订购成功立即生效 <br/>当月有效，不结转。 <br/></div><div class="formBox"><div><input type="text" class="tel" placeholder="请输入山东联通手机号"/></div><div class="cl"><input type="text" class="code l" placeholder="请输入验证码"/><input class="obtain l" onclick="obtain()" value="免费获取" type="button"/></div></div><div style="color: #5f5f5f;font-size: 0.24rem">验证码有效期10分钟，请勿重复获取</div><button class="orderBtn">订购</button></div>'
         });
     }
