--- a/src/index.html
+++ b/src/index.html
@@ -177,6 +177,10 @@
             </li>
         </ul>
     </div>
+    <div style="height: 1.2rem"></div>
+    <div id="footer">
+        <a href=""><img src="res/img/alibabaicon.svg" alt=""><span>联系客服</span></a>
+    </div>
     <script>
         (function (doc, win) {
             var docEl = doc.documentElement,
