--- a/src/index/index.html
+++ b/src/index/index.html
@@ -74,8 +74,8 @@
 <div style="height: 1.08rem"></div>
 <div class="footer">
     <ul class="clearfix">
-        <!--<li class="l share">分享给好友</li>-->
-        <li class="l order" onclick="order()">立即订购</li>
+        <li class="l kefu"><div><img src="../res/img/alibabaicon.svg" alt=""><div>客服</div></div></li>
+        <li class="l order" onclick="order()">立即办理</li>
     </ul>
 </div>
 <script>
